build scaffolding in place

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Github Respository Template for Front-end Mentor Challenges</h1>
+  <h1>REST Countries API with color theme switcher</h1>
 </body>
 
 </html>
