--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="Front-end Mentor REST Countries API with Color Theme Switcher Challenge">
+  <meta name="color-scheme" content="dark">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <title>Front-end Mentor REST Countries API</title>
+
+  <link rel="stylesheet" href="stylesheets/main.scss">
 </head>
 
 <body>
-  <h1>REST Countries API with color theme switcher</h1>
+  <h1 class="heading--1">REST Countries API with color theme switcher</h1>
 </body>
 
 </html>
