first cut at working api

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,17 @@
 </head>
 
 <body>
-  <h1 class="heading--1">REST Countries API with color theme switcher</h1>
+
+  <header>
+    <h1 class="heading--1">Where in the world?</h1>
+    <!-- Title -- Dark Mode Toggle -->
+    <!-- Search -- Filter by Region -->
+  </header>
+
+  <main>
+    <!-- country cards in grid -->
+  </main>
+
 </body>
 
 </html>
