custom build for api

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,16 @@
   <link rel="stylesheet" href="stylesheets/main.scss">
 </head>
 
-<body>
+<body class="theme--default">
 
   <header>
-    <h1 class="heading--1">Where in the world?</h1>
+    <a href="#" class="heading--1">Where in the world?</a>
     <!-- Title -- Dark Mode Toggle -->
     <!-- Search -- Filter by Region -->
   </header>
 
   <main>
+    <h1 class="visually-hidden">Search for countries</h1>
     <!-- country cards in grid -->
   </main>
 
