header completed with dark toggle

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,9 @@
 
   <header class="header">
     <div class="header__container">
-      <a href="#" class="heading--1">Where in the world?</a>
-      <input type="checkbox" id="dark-mode-toggle" class="visually-hidden" data-dark-mode-toggle>
+      <a href="#" class="heading--1 header__logo">Where in the world?</a>
+      <input type="checkbox" id="dark-mode-toggle" class="visually-hidden header__dark-mode-input"
+        data-dark-mode-toggle>
       <label for="dark-mode-toggle" class="header__dark-mode-label">
         <svg class="icon icon--moon" aria-hidden="true">
           <use href="./assets/icons.svg#icon--moon"></use>
