add skeleton country.html details page

--- a/src/country.html
+++ b/src/country.html
@@ -9,7 +9,7 @@
   <meta name="color-scheme" content="dark">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <title>Country Search</title>
+  <title>Country Detail</title>
 
   <link rel="stylesheet" href="stylesheets/main.scss">
   <script src="scripts/script.js" type="module"></script>
@@ -32,7 +32,7 @@
   </header>
 
   <main class="main">
-    <h1 class="visually-hidden">Search for countries</h1>
+    <h1 class="visually-hidden">Country Details</h1>
     <!--
       <svg class="icon icon--search">
         <use href="./assets/icons.svg#icon--search"></use>
