--- a/src/country.html
+++ b/src/country.html
@@ -11,8 +11,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Country Detail</title>
 
-  <link rel="stylesheet" href="../stylesheets/main.scss">
-  <script src="../scripts/script.js" type="module"></script>
+  <link rel="stylesheet" href="stylesheets/main.scss">
+  <script src="scripts/script.js" type="module"></script>
 </head>
 
 <body class="body theme--default">
