--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
     <div class="section results">
       <ul class="results__list" data-search-results></ul>
       <!-- country cards in grid -->
+      <!-- cards are 264px (16.5rem) x 336px (21rem) in all cases -->
     </div>
   </main>
 
