--- a/src/country.html
+++ b/src/country.html
@@ -34,6 +34,8 @@
   <main class="main">
     <h1 class="visually-hidden">Country Details</h1>
 
+    <a href="/index.html" class="btn btn--primary">Back</a>
+
     <h2 data-country-name></h2>
     <img data-country-flag src="" alt="">
 
