--- a/src/country.html
+++ b/src/country.html
@@ -34,7 +34,7 @@
   <main class="country">
     <h1 class="visually-hidden">Country Details</h1>
 
-    <a href="/index.html" class="btn btn--primary">
+    <a href="/index.html" class="btn btn--primary" data-country-back>
       <svg class="icon icon--left-arrow">
         <use href="./assets/icons.svg#icon--left-arrow"></use>
       </svg>
@@ -72,7 +72,7 @@
         <dt class="label--1">Languages</dt>
         <dd class="text--1" data-country-languages></dd>
 
-        <dt class="label--1">Border Countries</dt>
+        <dt class="label--1 country__border-label">Border Countries</dt>
         <dd class="text--1" data-country-border-countries></dd>
       </dl>
     </div>
